--- a/templates/dashboard/imprimantes/printIndex.html.twig
+++ b/templates/dashboard/imprimantes/printIndex.html.twig
@@ -8,7 +8,12 @@
     <div class="container">
         <div class="row">
             <h1>Gestion des imprimantes de <span>Xtra-Copy</span></h1>
+            <div class="menuPrint">
             <a href="{{ path('printnew') }}" class="ajout">Ajouter une imprimante</a>
+            <a href="{{ path('app_MenuAdmin') }}" class="ajout">Retour</a>
+            </div>
+            
+            
         </div>
         <div class="row">
             <table>
