--- a/templates/dashboard/imprimantes/printNew.html.twig
+++ b/templates/dashboard/imprimantes/printNew.html.twig
@@ -7,7 +7,7 @@
 <div class="imprimante">
     <div class="container">
         <div class="row">
-            <h1>ajout d'une imprimante</h1>
+            <h1>Ajout d'une imprimante</h1>
         </div>
             {{form_start(form)}}
             
