--- a/templates/dashboard/photocopies/addcolor.html.twig
+++ b/templates/dashboard/photocopies/addcolor.html.twig
@@ -7,7 +7,7 @@
 <div class="imprimante">
     <div class="container">
         <div class="row">
-            <h1>ajout d'un prix pour les photocopies couleur</h1>
+            <h1>Prix couleur</h1>
         </div>
             {{form_start(form)}}
             
