--- a/templates/dashboard/menuApi.html.twig
+++ b/templates/dashboard/menuApi.html.twig
@@ -13,7 +13,7 @@
                     <li><a href="{{ path('printindex') }}"><i class="fa-solid fa-print"></i>Imprimantes</a></li>         
                     <li><a href="{{ path('prixcopieindex') }}"><i class="fa-solid fa-copy"></i>Prix copies et abonnements</a></li>     
                     <li><a href="{{ path('app_type_paper') }}"><i class="fa-regular fa-note-sticky"></i>Type de papier</a></li>  
-                    <li><a href=""><i class="fa-solid fa-droplet"></i>Reliures</a></li> 
+                    <li><a href="{{ path('app_reliures') }}"><i class="fa-solid fa-droplet"></i>Reliures</a></li> 
                     <li><a href=""><i class="fa-solid fa-pen-clip"></i>Fournitures</a></li>           
                 </ul>
             </div>
