--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1282,6 +1282,7 @@ footer {
         text-align: center;
         padding-top: 20px;
 
+
         label {
             padding-bottom: 10px;
             font-weight: bold;
@@ -1294,6 +1295,11 @@ footer {
             font-size: 25px;
             line-height: 40px;
             text-align: center;
+        }
+    }
+    #workers_roles {
+        label {
+            display: none;
         }
     }
 
