--- a/templates/dashboard/menuApi.html.twig
+++ b/templates/dashboard/menuApi.html.twig
@@ -9,7 +9,7 @@
             <h1>Paramètres de <span>Xtra Copy Tournai</span></h1>
             <div class="classic">
                 <ul>
-                <li><a href="{{ path('printindex') }}"><i class="fa-solid fa-user"></i>Employés</a></li>
+                <li><a href="{{ path('app_worker') }}"><i class="fa-solid fa-user"></i>Employés</a></li>
                     <li><a href="{{ path('printindex') }}"><i class="fa-solid fa-print"></i>Imprimantes</a></li>         
                     <li><a href="{{ path('prixcopieindex') }}"><i class="fa-solid fa-copy"></i>Prix copies et abonnements</a></li>     
                     <li><a href="{{ path('app_type_paper') }}"><i class="fa-regular fa-note-sticky"></i>Type de papier</a></li>  
