--- a/templates/dashboard/worker/index.html.twig
+++ b/templates/dashboard/worker/index.html.twig
@@ -7,9 +7,9 @@
 <div class="imprimante">
     <div class="container">
         <div class="row">
-            <h1>Gestion des type de reliures de <span>Xtra-Copy</span></h1>
+            <h1>Gestion du personnel de <span>Xtra-Copy</span></h1>
             <div class="menuPrint">
-                <a href="{{ path('reliureNew') }}" class="ajout">Ajouter un type de reliure</a>
+                <a href="{{ path('app_worker_add') }}" class="ajout">Ajouter un employé</a>
                 <a href="{{ path('app_MenuAdmin') }}" class="ajout">Retour</a>
             </div>
         </div>
@@ -17,23 +17,25 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Nom</th>
-                        <th>Prix</th>
+                        <th>Adresse mail</th>
+                        <th>Mot de passe</th>
+                        <th>Rôles</th>
                         <th>Actions</th>
                     </tr>
                 </thead> 
                 <tbody>
-                
-                    
-                    {% for reliure in reliures %}
+                {% for worker in workers %}
                     <tr>
-                        <td>{{reliure.Name}}</td>
-                        <td>{{reliure.Price}} €</td>
-                        <td class="link"><a href="{{path('reliureEdit',{'id': reliure.id})}}" class="btn btn-warning mx-2">Modifier</a>
-                            <a href="{{path('reliureDelete',{'id': reliure.id})}}" class="btn btn-danger mx-2">Supprimer</a>
+                        <td>{{worker.email}}</td>
+                        <td>{{worker.password}}</td>
+                        <td>{{ worker.roles|join(', ') }}</td>
+                        <td class="link">
+                            <a href="{{path('app_worker_delete',{'id': worker.id})}}" class="btn btn-danger mx-2">Supprimer</a>
                         </td>
                     </tr>
                      {% endfor %}
+                
+                    
                 </tbody>
 
                 
