--- a/templates/dashboard/imprimantes/printEdit.html.twig
+++ b/templates/dashboard/imprimantes/printEdit.html.twig
@@ -32,6 +32,11 @@
                 {{ form_widget(form.mibColorA4) }}
                 {{ form_errors(form.mibColorA4) }}
             </div>
+            <div class="form-groupe">
+                {{ form_label(form.MibColorA42) }}
+                {{ form_widget(form.MibColorA42) }}
+                {{ form_errors(form.MibColorA42) }}
+            </div>
              <div class="form-groupe">
                 {{ form_label(form.mibColorA3) }}
                 {{ form_widget(form.mibColorA3) }}
@@ -41,6 +46,11 @@
                 {{ form_label(form.mibBlackWitheA4) }}
                 {{ form_widget(form.mibBlackWitheA4) }}
                 {{ form_errors(form.mibBlackWitheA4) }}
+            </div>
+            <div class="form-groupe">
+                {{ form_label(form.MibBlackWitheA42) }}
+                {{ form_widget(form.MibBlackWitheA42) }}
+                {{ form_errors(form.MibBlackWitheA42) }}
             </div>
             <div class="form-groupe">
                 {{ form_label(form.mibBlackWitheA3) }}
