--- a/templates/dashboard/apiCaisse/noPrint.html.twig
+++ b/templates/dashboard/apiCaisse/noPrint.html.twig
@@ -1,15 +1,14 @@
 {% extends 'baseConnect.html.twig' %}
-
 {% block title %}{% endblock %}
-
 {% block body %}
 <div class="administration">
     <div class="content">
         <div class="container">
-            <h1>Système de caisse de <span>Xtra Copy</span> : Accueil</h1>
+            {% include "dashboard/apiCaisse/partials/_logo.html.twig" %}
+            <h1>Caisse de <span>Xtra Copy</span> : Encodage</h1>
             <h2>Encoder l'opération</h2>
         </div>
-        </div>
+        {% include "dashboard/apiCaisse/partials/_footer.html.twig" %}
     </div>
 </div>
 {% endblock %}
