--- a/templates/dashboard/indexAdmin.html.twig
+++ b/templates/dashboard/indexAdmin.html.twig
@@ -6,22 +6,25 @@
 <div class="administration">
     <div class="content">
         <div class="container">
-            <h1>Administration de <span>Xtra Copy Tournai</span></h1>
+            {% include "dashboard/apiCaisse/partials/_logo.html.twig" %}
+            <h1>Administration de <span>Xtra Copy</span></h1>
             <div class="classic">
                 <ul>
-                    <li><a href="{{ path('app_dashboard') }}" target="_blank"><i class="fa-solid fa-shop"></i>Lien vers Api du magasin</a></li>         
-                    <li><a href=""><i class="fa-solid fa-coins"></i>Lien vers la comptabilité</a></li>     
-                    <li><a href=""><i class="fa-solid fa-desktop"></i>Gestion du site</a></li>  
-                    <li><a href="{{ path('app_MenuAdmin') }}"><i class="fa-solid fa-gauge-high"></i>Parametres de l'Api</a></li>           
+                    <li><a href="{{ path('app_dashboard') }}" target="_blank"><i class="fa-solid fa-shop"></i>Lien vers
+                            Api du magasin</a></li>
+                    <li><a href=""><i class="fa-solid fa-coins"></i>Lien vers la comptabilité</a></li>
+                    <li><a href=""><i class="fa-solid fa-desktop"></i>Gestion du site</a></li>
+                    <li><a href="{{ path('app_MenuAdmin') }}"><i class="fa-solid fa-gauge-high"></i>Parametres de
+                            l'Api</a></li>
                 </ul>
             </div>
             <div class="link">
-                <ul>  
-                    <li><a href="{{ path('AccueilSiteWeb') }}" target="_blank">Site Internet</a></li>
+                <ul>
                     <li><a href="">Se déconnecter</a></li>
-                </ul> 
+                </ul>
             </div>
         </div>
+        {% include "dashboard/apiCaisse/partials/_footer.html.twig" %}
     </div>
 </div>
 
