--- a/templates/dashboard/menuApi.html.twig
+++ b/templates/dashboard/menuApi.html.twig
@@ -6,24 +6,28 @@
 <div class="administration">
     <div class="content">
         <div class="container">
-            <h1>Paramètres de <span>Xtra Copy Tournai</span></h1>
+            {% include "dashboard/apiCaisse/partials/_logo.html.twig" %}
+            <h1>Paramètres de <span>Xtra Copy</span></h1>
             <div class="classic">
                 <ul>
-                <li><a href="{{ path('app_worker') }}"><i class="fa-solid fa-user"></i>Employés</a></li>
-                    <li><a href="{{ path('printindex') }}"><i class="fa-solid fa-print"></i>Imprimantes</a></li>         
-                    <li><a href="{{ path('prixcopieindex') }}"><i class="fa-solid fa-copy"></i>Prix copies et abonnements</a></li>     
-                    <li><a href="{{ path('app_type_paper') }}"><i class="fa-regular fa-note-sticky"></i>Type de papier</a></li>  
-                    <li><a href="{{ path('app_reliures') }}"><i class="fa-solid fa-droplet"></i>Reliures</a></li> 
-                    <li><a href=""><i class="fa-solid fa-pen-clip"></i>Fournitures</a></li>           
+                    <li><a href="{{ path('app_worker') }}"><i class="fa-solid fa-user"></i>Employés</a></li>
+                    <li><a href="{{ path('printindex') }}"><i class="fa-solid fa-print"></i>Imprimantes</a></li>
+                    <li><a href="{{ path('prixcopieindex') }}"><i class="fa-solid fa-copy"></i>Prix copies et
+                            abonnements</a></li>
+                    <li><a href="{{ path('app_type_paper') }}"><i class="fa-regular fa-note-sticky"></i>Type de
+                            papier</a></li>
+                    <li><a href="{{ path('app_reliures') }}"><i class="fa-solid fa-droplet"></i>Reliures</a></li>
+                    <li><a href=""><i class="fa-solid fa-pen-clip"></i>Fournitures</a></li>
                 </ul>
             </div>
             <div class="link">
-                <ul>  
+                <ul>
                     <li><a href="{{ path('app_dashboardAdmin') }}">Retour</a></li>
                     <li><a href="">Se déconnecter</a></li>
-                </ul> 
+                </ul>
             </div>
         </div>
+        {% include "dashboard/apiCaisse/partials/_footer.html.twig" %}
     </div>
 </div>
 
