--- a/templates/dashboard/menuApi.html.twig
+++ b/templates/dashboard/menuApi.html.twig
@@ -17,6 +17,7 @@
                     <li><a href="{{ path('app_type_paper') }}"><i class="fa-regular fa-note-sticky"></i>Type de
                             papier</a></li>
                     <li><a href="{{ path('app_reliures') }}"><i class="fa-solid fa-droplet"></i>Reliures</a></li>
+                    <li><a href="{{ path('pricePhotoIndex') }}"><i class="fa-solid fa-camera-retro"></i>Photos</a></li>
                     <li><a href=""><i class="fa-solid fa-pen-clip"></i>Fournitures</a></li>
                 </ul>
             </div>
