--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -982,6 +982,310 @@ background: linear-gradient(153deg, rgba(0,184,140,1) 0%, rgba(19,55,50,1) 100%)
 
             }
         }
+        h2{
+            text-align: center;
+            padding-top: 15px;
+            font-size: 35px;
+            color:#B7D14E;
+        }
+        .formulaire
+        {
+            margin-top: 30px;
+            background-color: rgba(0, 0, 0, 0.1);
+            height: 750px;
+            border-radius: 25px;
+            position: relative;
+            .copie{
+                width: 270px;
+                
+                margin-top: 25px;
+                position: absolute;
+                right: 20px;
+                border-radius: 25px;
+                h3{
+                    font-size: 25px;
+                    text-align: center;
+                    color: white;
+
+                }
+                .formcopie{
+
+                    display: flex;
+                    justify-content: space-evenly;
+                    position: relative;
+                    label{
+                        background-color: rgba(0, 0, 0, 0.1);
+                        width: 125px;
+                        height: 125px;
+                        border-radius: 80px;
+                        text-align: center;
+                        padding-top: 30px;
+                        color: #ffffff;
+                        
+                        p{
+                            color:#ffdc06;
+                            font-size: 40px;
+                            text-align: center;
+                            padding-top: 10px;
+                           
+                        }
+                    }
+                    
+                }
+
+            }
+            .reliures{
+                width: 90%;
+                margin-left: 5%;
+                background-color: rgba(0, 0, 0, 0.1);
+                position: absolute;
+                border-radius: 25px;
+                bottom: 10px;
+                height: 200px;
+                h3 {
+                    font-size: 28px;
+                    text-align: center;
+                    color: white;
+                    margin-top: 15px;
+                    margin-bottom: 15px;
+                    color: #B7D14E;
+                    font-weight: bold;
+                }
+                ul{
+                    display: flex;
+                    flex-wrap: wrap;   
+                justify-content: space-around;
+                li{
+                    width: 29%;
+                    display: flex;
+                    justify-content: space-between;
+                    margin-bottom: 2px;
+                    label{
+                        color: white;
+                        font-size: 16px;
+                    }
+                }
+            input{
+                width: 50px;
+                text-align: center;
+                background-color: rgba(0, 0, 0, 0.1);
+                border: none;
+                color: #B7D14E;
+            
+            }             }
+            }
+            .papier{
+                width: 45%;
+                background-color: rgba(0, 0, 0, 0.1);
+                position: absolute;
+                margin-left: 5%;
+                top: 20px;
+                border-radius: 25px;
+                height: 230px;
+                ul{
+                    display: flex;
+                    list-style-type: none;
+                    flex-wrap: wrap;
+                    justify-content: space-between;
+                    
+                    li{
+                        text-decoration: none;
+                        display: flex;
+                        justify-content: space-between;
+                        width: 40%;
+                        margin-left: 5%;
+                        margin-right: 5%;
+                        margin-bottom: 2px;
+                        
+                        input{
+                            width: 50px;
+                            text-align: center;
+                            background-color: rgba(0, 0, 0, 0.1);
+                            color: #B7D14E;
+                            border: none;
+                        }
+                        label{
+                            color: white;
+                            font-size: 16px;
+                        }
+                    }
+                }
+                h3 {
+                    font-size: 28px;
+                    text-align: center;
+                    color: white;
+                    margin-top: 15px;
+                    margin-bottom: 15px;
+                    color: #B7D14E;
+                    font-weight: bold;
+                }
+            }
+            .photo{
+                width: 55%;
+                background-color: rgba(0, 0, 0, 0.1);
+                position: absolute;
+                margin-left: 5%;
+                top: 270px;
+                border-radius: 25px;
+                height: 250px;
+                h3 {
+                    font-size: 28px;
+                    text-align: center;
+                    color: white;
+                    margin-top: 15px;
+                    margin-bottom: 15px;
+                    color: #B7D14E;
+                    font-weight: bold;
+                }
+                ul{
+                    display: flex;
+                    list-style-type: none;
+                    flex-wrap: wrap;
+                    justify-content: space-between;
+                    
+                   
+    
+                   
+                    
+                    li{
+                        text-decoration: none;
+                        display: flex;
+                        justify-content: space-between;
+                        width: 40%;
+                        margin-left: 5%;
+                        margin-right: 5%;
+                        margin-bottom: 2px;
+
+                       
+                        
+                        input{
+                            width: 50px;
+                            text-align: center;
+                            background-color: rgba(0, 0, 0, 0.1);
+                            color: #B7D14E;
+                            
+                        }
+                        label{
+                            color: white;
+                            font-size: 16px;
+                        }
+                    }
+                }
+            }
+            .autre{
+                width: 15%;
+                background-color: rgba(0, 0, 0, 0.1);
+                position: absolute;
+                margin-left: 63%;
+                top: 270px;
+                border-radius: 25px;
+                height: 200px;
+                .euro{
+                    text-align: center;
+                    color: white;
+                    font-size: 35px;
+                    padding-top: 30px;
+                }
+                h3 {
+                    font-size: 28px;
+                    text-align: center;
+                    margin-top: 15px;
+                    margin-bottom: 15px;
+                    color: #B7D14E;
+                    font-weight: bold;
+                }
+                .center{
+                    display: flex;
+                    justify-content: center;
+                    input{
+                    width: 150px;
+                    text-align: center;
+                    background-color: rgba(0, 0, 0, 0.1);
+                    color: #B7D14E;
+                    border: none;
+                    font-size: 30px;
+                }
+                }
+                
+            }
+            .total{
+                width: 200px;
+                height: 200px;
+                border-radius: 100px;
+                background-color: rgba(0, 0, 0, 0.1);
+                position: absolute;
+                top: 20px;
+                right: 350px;
+                
+                h3 {
+                    font-size: 28px;
+                    text-align: center;
+                    margin-top: 15px;
+                    margin-bottom: 15px;
+                    color: #B7D14E;
+                    font-weight: bold;
+                    margin-top: 20px;
+                    
+                }
+                p{
+                    color: #B7D14E;
+                    font-size: 25px;
+                    text-align: center;
+                    margin-top: 40px;
+                    span{
+                        color: white;
+                        
+                        font-size: 36px;
+                    }
+                }
+            }
+            .link{
+              
+                width: 250px;
+                display: flex;
+                flex-direction: column;
+                position: absolute;
+                right: 26px;
+                top: 270px;
+                border-radius: 25px;
+                padding-bottom: 55px;
+                input {
+                    width: 80%;
+                    margin: auto;
+                    margin-top: 25px;
+                    margin-bottom: 55px;
+                    background-color: #ffdc06;
+                    border: none;
+                    font-size: 33px;
+                    color:#562B1A;
+                    border-radius: 15px;
+                    opacity: 0.5;
+                    height: 50px;
+                    &:hover{
+                        opacity: 1;
+                    }
+
+
+                }
+                a{
+                    width: 80%;
+                    margin: auto;
+                    text-align: center;
+                    background-color: rgba(0, 0, 0, 0.1);
+                    color: white;
+                    text-decoration: none;
+                    font-size: 33px;
+                    border-radius: 15px;
+                    line-height: 38px;
+                    opacity: 0.5;
+                    &:hover{
+                        opacity: 1;
+                    }
+
+                }
+            }
+        }
+
         .footer{
             width: 100%;
             height: 50px;
